[package]
name = "hello-world-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { version = "0.99", features = ["error", "display"] }
rayon = "1.6"

[features]
default = []
integration-tests = []

[dev-dependencies]
assert_fs = "1.0.10" 
